- Fixed a bug in the user logo selection; - Fixed bug in the align of the cards in smaller screens.

--- a/fcc-twitch/css/style.css
+++ b/fcc-twitch/css/style.css
@@ -7,7 +7,7 @@
 }
 
 .loading{
-    min-height: 70vh;
+    min-height: 80vh;
     margin: 0 auto;
     position: relative;   
     align-content: center;
